# doda-browser

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  REBASE.md  STRUCTURE.md  mozconfig-release
.github/workflows/: release.yml
components/identity-wallet/: Cargo.toml
components/identity-wallet/src/: did.rs  lib.rs  storage.rs  vc.rs  wallet.rs
components/knowledge-graph/: Cargo.toml
components/knowledge-graph/src/: lib.rs
components/programmable/extension/: background.js  content.js  manifest.json
components/programmable/extension/recorder/: recorder.html  recorder.js
components/programmable/extension/repl/: repl.html  repl.js
design/: theme.css  tokens.css
patches/: privacy-hardening.patch  rebrand.patch
scripts/: bootstrap.sh  build-release.sh  package-release.sh  qa.sh  run-all.sh  run-with-ai.sh  run-with-kg.sh  run-with-programmable.sh  run-with-provenance.sh  setup-dev.sh
source/: mozconfig  mozconfig-release  mozconfig-release-android  mozconfig-release-linux  mozconfig-release-macos  mozconfig-release-windows
source/browser/base/content/: aboutDialog.js
source/browser/branding/unofficial/: configure.sh
source/browser/components/preferences/: moreFromMozilla.inc.xhtml  moreFromMozilla.js  preferences.js  preferences.xhtml
source/browser/extensions/durgashield/: background.js  content.js  jar.mn  manifest.json  popup.js  privacy.html  settings.js
source/docshell/base/: nsAboutRedirector.cpp
source/toolkit/components/: moz.build
source/toolkit/components/aiengine/: AIEngine.cpp  AIEngine.h  jar.mn  (+7 more)
(+83 files in other folders)
